--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,19 @@
 {
   "short_name": "NpNg",
-  "name": "No Pain No Gain",
+  "name": "No Pain No Gain - App",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "Logo-NpNg.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo-NpNg.png",
+      "src": "Logo-NpNg-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo-NpNg.png",
+      "src": "Logo-NpNg-512x512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
